<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_gradient_bg"
        tools:context=".ui.login.RequestOtpActivity">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_hundred"
            android:background="@android:color/transparent"
            android:fontFamily="@font/raleway"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_title_text_size"
            android:transitionName="@string/transition_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_thirty_two"
            android:layout_marginTop="@dimen/dimen_thirty_two"
            android:layout_marginEnd="@dimen/dimen_thirty_two"
            app:labelText="@string/phone_number"
            app:layout_constraintTop_toBottomOf="@id/app_title"
            app:primaryColor="@android:color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:textColor="@android:color/white"
                app:prefix="@string/india_phone_prefix"
                app:prefixTextColor="@android:color/white" />
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/go_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_thirty_two"
            android:background="@color/app_bg_grad_middle"
            android:padding="@dimen/dimen_eight"
            android:text="@string/send_otp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="@dimen/btn_radius"
            app:layout_constraintLeft_toLeftOf="@id/phone_layout"
            app:layout_constraintRight_toRightOf="@id/phone_layout"
            app:layout_constraintTop_toBottomOf="@id/phone_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>