<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_gradient_bg"
        tools:context=".ui.login.ValidateOtpActivity">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_hundred"
            android:background="@android:color/transparent"
            android:fontFamily="@font/raleway"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_title_text_size"
            android:transitionName="@string/transition_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_thirty_two"
            android:layout_marginTop="@dimen/dimen_thirty_two"
            android:layout_marginEnd="@dimen/dimen_thirty_two"
            android:inputType="number"
            android:itemBackground="@drawable/otp_cell_bg"
            app:itemCount="6"
            app:itemHeight="72dp"
            app:itemRadius="@dimen/dimen_sixteen"
            app:itemSpacing="@dimen/dimen_sixteen"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_title" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/validate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_thirty_two"
            android:padding="@dimen/dimen_eight"
            android:text="@string/validate"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@id/otp_view"
            app:layout_constraintRight_toRightOf="@id/otp_view"
            app:layout_constraintTop_toBottomOf="@id/otp_view" />

    <androidx.appcompat.widget.AppCompatTextView
            android:padding="@dimen/dimen_four"
            android:id="@+id/resend_btn"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/validate_btn"
            app:layout_constraintRight_toRightOf="@id/otp_view"
            app:layout_constraintTop_toBottomOf="@id/otp_view" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resend_btn_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/resend_btn"
            app:layout_constraintRight_toLeftOf="@id/resend_btn"
            app:layout_constraintTop_toTopOf="@id/resend_btn"
            tools:text="@string/otp_resend_enable_text" />




</androidx.constraintlayout.widget.ConstraintLayout>